--- a/views/register.html
+++ b/views/register.html
@@ -1,89 +1,73 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/stylesheets/style.css" />
-    <title>Huellitas en casa</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/4d235eb227.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="shortcut icon"
-      href="/public/images/favicon.ico"
-      type="image/x-icon"
-    />
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J"
-      crossorigin="anonymous"
-    />
-  </head>
 
-  <body class="container">
-    <header class="main-header">
-      <div class="container-nav">
-        <div class="logo-container">
-          <a class="navbar-logo" href="/views/index.html">
-            <img
-              src="../public/images/huellitas_en_casa-logo.png"
-              class="logo-nav"
-              alt="logo-huellitas"
-            />
-          </a>
-        </div>
-        <nav>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
-            <li class="nav-item">
-              <a class="nav-link active" href="#about-us">
-                <i class="fa-solid fa-paw"></i> Acerca de
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">
-                <i class="fa-solid fa-paw"></i> Contacto
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fa-solid fa-paw"></i> Voluntariado
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
-                <i class="fa-solid fa-paw"></i> Formulario pre Adopción
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./register.html">
-                <i class="fa-regular fa-circle-user"></i> Registrate
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./login.html">
-                <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
-              </a>
-            </li>
-          </ul>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../public/stylesheets/style.css" />
+  <title>Huellitas en casa</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous" />
+</head>
+
+<body class="container">
+  <header class="main-header">
+    <div class="container-nav">
+      <div class="logo-container">
+        <a class="navbar-logo" href="/views/index.html">
+          <img src="../public/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas" />
+        </a>
       </div>
-    </header>
+      <nav>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
+          <li class="nav-item">
+            <a class="nav-link active" href="#about-us">
+              <i class="fa-solid fa-paw"></i> Acerca de
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto">
+              <i class="fa-solid fa-paw"></i> Contacto
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fa-solid fa-paw"></i> Voluntariado
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/views/preAdopt.html">
+              <i class="fa-solid fa-paw"></i> Formulario pre Adopción
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./register.html">
+              <i class="fa-regular fa-circle-user"></i> Registrate
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./login.html">
+              <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <main>
-<!-- Registro de usuario -->
-<div class="formulario">
-  <h1>¡Bienvenido@ a la familia!</h1>
-  <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
-  <form>
+  <main>
+    <!-- Registro de usuario -->
+    <div class="formulario">
+      <h1>¡Bienvenido@ a la familia!</h1>
+      <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
       <form>
         <div class="registro">
           <label for="username">Nombre:</label>
@@ -91,20 +75,11 @@
           <label for="username">Apellido:</label>
           <input type="text" name="apellido" placeholder="Ingresa tu apellido" required />
           <label for="Email">Correo electronico:</label>
-          <input
-            type="email"
-            name="Email"
-            id="email"
-            placeholder="Ingresa tu email"
-          />
+          <input type="email" name="Email" id="email" placeholder="Ingresa tu email" />
           <label for="phone">Teléfono:</label>
           <input type="number" id="phone" name="phone" placeholder="Ingresa tu teléfono" />
           <label for="Domicilio">Dirección:</label>
-          <input
-            type="text"
-            id="Domicilio"
-            name="Domicilio"
-            placeholder="Domicilio" />
+          <input type="text" id="Domicilio" name="Domicilio" placeholder="Domicilio" />
           <label for="text">¿Como te enteraste de nosotros?:</label>
           <select id="text" name="" required>
             <option value=""></option>
@@ -112,8 +87,8 @@
             <option value="mx">Instagram</option>
             <option value="ar">Twitter</option>
             <option value="co">Ya adopte</option>
-            <option value="cl">Otro</option></select
-          >
+            <option value="cl">Otro</option>
+          </select>
           <button class="btn-submit" type="submit">Enviar</button>
         </div>
         <h2>¿Por qué registrarse?</h2>
@@ -123,85 +98,66 @@
           garantiza el cumplimiento de nuestras políticas de bienestar animal.
         </p>
       </form>
-    </main>
-    <footer>
-      <div class="footer-content">
-        <div class="footer-logo-container">
-          <img
-            src="../public/images/huellitas_en_casa-logo.png"
-            alt="Huellitas en casa"
-            class="footer-logo"
-          />
-          <p class="footer-direccion">ruta 16 Parc 501</p>
-          <p class="footer-telefono">(549) 11 4465 5161</p>
-        </div>
-        <div class="footer-columns">
-          <div class="footer-column">
-            <h2>Menú</h2>
-            <ul class="footer-list">
-              <li>
-                <a href="#about-us"
-                  ><i class="fa-solid fa-paw"></i> Acerca de</a
-                >
-              </li>
-              <li>
-                <a href="#animal-container"
-                  ><i class="fa-solid fa-paw"></i> Adopción</a
-                >
-              </li>
-              <li>
-                <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer-column">
-            <h2>Nuestras redes</h2>
-            <ul class="footer-list">
-              <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
-              <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
-              <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
-              <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
-            </ul>
-          </div>
+  </main>
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo-container">
+        <img src="../public/images/huellitas_en_casa-logo.png" alt="Huellitas en casa" class="footer-logo" />
+        <p class="footer-direccion">ruta 16 Parc 501</p>
+        <p class="footer-telefono">(549) 11 4465 5161</p>
+      </div>
+      <div class="footer-columns">
+        <div class="footer-column">
+          <h2>Menú</h2>
+          <ul class="footer-list">
+            <li>
+              <a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a>
+            </li>
+            <li>
+              <a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a>
+            </li>
+            <li>
+              <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a>
+            </li>
+          </ul>
         </div>
         <div class="footer-column">
-          <h4>Suscríbete a nuestro Newsletter</h4>
-          <form action="https://your-mailchimp-form-action" method="post">
-            <div class="form-group">
-              <input
-                type="email"
-                name="EMAIL"
-                placeholder="Tu correo electrónico"
-                required
-              />
-              <button type="submit" class="btn-submit">Suscríbete</button>
-            </div>
-          </form>
+          <h2>Nuestras redes</h2>
+          <ul class="footer-list">
+            <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
+            <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
+            <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
+            <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
+          </ul>
         </div>
       </div>
-      <p class="footer-copyright">
-        © 2024 Huellitas en Casa. Todos los derechos reservados.
-      </p>
-    </footer>
-    <!-- Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      <div class="footer-column">
+        <h4>Suscríbete a nuestro Newsletter</h4>
+        <form action="https://your-mailchimp-form-action" method="post">
+          <div class="form-group">
+            <input type="email" name="EMAIL" placeholder="Tu correo electrónico" required />
+            <button type="submit" class="btn-submit">Suscríbete</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <p class="footer-copyright">
+      © 2024 Huellitas en Casa. Todos los derechos reservados.
+    </p>
+  </footer>
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
