--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,30 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-body{
+body {
     background-color: #C896EA;
     font-family: "fredoka";
 }
-main{
+
+main {
     text-align: center;
-} 
-.titulo-container { /* Nuevo contenedor para el título y el párrafo */
-    margin-bottom: 20px; 
+}
+
+.footer-columns {
+    flex: 2;
+    display: flex;
+    justify-content: space-around;
+}
+
+.titulo-container {
+    /* Nuevo contenedor para el título y el párrafo */
+    margin-bottom: 20px;
 }
 
 .titulo-container p {
-    margin-top: 0; /* Elimina el margen superior por defecto del párrafo */
+    margin-top: 0;
+    /* Elimina el margen superior por defecto del párrafo */
 }
+
 /* Formulario */
-.caja-formulario{
-    border: 3px solid black; 
+.caja-formulario {
+    border: 3px solid black;
     width: 35%;
     margin-left: 30%;
     margin-bottom: 20px;
 }
 
-.boton-enviar{
+.boton-enviar {
     background-color: lightblue;
 }
+
 .olvido-contrasena {
     text-align: center;
     margin-top: 20px;
@@ -32,4 +44,32 @@ main{
 
 .olvido-contrasena button {
     background-color: #F7E97B;
+}
+
+/* Media Queris */
+
+@media screen and (max-width: 375px) {
+    .container {
+        flex-direction: column;
+        /* Apilar elementos verticalmente */
+        align-items: flex-start;
+        /* Alinear a la izquierda */
+    }
+
+    .nav-lista {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        /* Ocupar todo el ancho */
+        margin-top: 1rem;
+        /* Espacio superior */
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
 }
