--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -2,58 +2,73 @@
 
 /* formulario */
 .formulario {
-    background-color: transparent; 
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    max-width: 500px; 
-    margin: 0 auto; /* Centra el formulario */
-  }
-  .formulario h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .formulario p {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  /* Estilos para los inputs */
-  input[type="text"],
-  input[type="number"],
-  input[type="email"],
-  select {
-    width: 400px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    margin: 0;
-    box-sizing: border-box; 
-  }
-  
-  .btn-submit {
-    font-family: 'fredoka';
-    background-color: var(--color-celeste);
-    color: var(--color-negro-suave);
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  .formulario label {
-    display: block; 
-    margin-bottom: 5px; 
-  }
-  
-  .formulario textarea { 
+  background-color: transparent;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  max-width: 500px;
+  margin: 0 auto;
+  /* Centra el formulario */
+}
+
+.formulario h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.formulario p {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* Estilos para los inputs */
+input[type="text"],
+input[type="number"],
+input[type="email"],
+select {
+  width: 400px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.btn-submit {
+  font-family: 'fredoka';
+  background-color: var(--color-celeste);
+  color: var(--color-negro-suave);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.formulario label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.formulario textarea {
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+}
+
+/* Media Queris */
+
+@media screen and (min-width: 425px) {
+  .formulario {
     width: 100%;
-    height: 150px; 
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    resize: vertical; 
+    max-width: 400px;
+    /* Limita el ancho máximo */
+    margin: 0 auto;
+    /* Centra el formulario */
+    padding: 15px;
   }
 
-  
+}
