--- a/views/adoptDetail.html
+++ b/views/adoptDetail.html
@@ -14,53 +14,54 @@
         rel="stylesheet" />
     <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
-     <!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous">
 </head>
 
 <body class="container">
-  <header class="main-header">
-    <div class="container-nav">
-      <div class="logo-container"> 
-        <a class="navbar-logo" href="/views/index.html">
-          <img src="../public/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas">
-        </a>
-      </div>
-      <nav>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
-          <li class="nav-item">
-            <a class="nav-link active" href="#about-us">
-              <i class="fa-solid fa-paw"></i> Acerca de
-            </a>
-          </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">
-                <i class="fa-solid fa-paw"></i> Contacto
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fa-solid fa-paw"></i> Voluntariado
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
-                <i class="fa-solid fa-paw"></i> Formulario pre Adopción
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./register.html">
-                <i class="fa-regular fa-circle-user"></i> Registrate
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./login.html">
-                <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+    <header class="main-header">
+        <div class="container-nav">
+            <div class="logo-container">
+                <a class="navbar-logo" href="/views/index.html">
+                    <img src="../public/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas">
+                </a>
+            </div>
+            <nav>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#about-us">
+                            <i class="fa-solid fa-paw"></i> Acerca de
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contacto">
+                            <i class="fa-solid fa-paw"></i> Contacto
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa-solid fa-paw"></i> Voluntariado
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/views/preAdopt.html">
+                            <i class="fa-solid fa-paw"></i> Formulario pre Adopción
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./register.html">
+                            <i class="fa-regular fa-circle-user"></i> Registrate
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./login.html">
+                            <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <a href="./index.html">← Volver a la lista</a>
@@ -105,19 +106,25 @@
             <div class="footer-newsletter">
                 <h4>Suscríbete a nuestro Newsletter</h4>
                 <form action="https://your-mailchimp-form-action" method="post">
-                  <div class="form-group">
-                    <input type="email" name="EMAIL" placeholder="Tu correo electrónico" required>
-                    <button type="submit" class="btn btn-primary">Suscríbete</button>
-                  </div>
+                    <div class="form-group">
+                        <input type="email" name="EMAIL" placeholder="Tu correo electrónico" required>
+                        <button type="submit" class="btn btn-primary">Suscríbete</button>
+                    </div>
                 </form>
-          </div> 
+            </div>
         </div>
         <p class="footer-copyright">© 2024 Huellitas en Casa. Todos los derechos reservados.</p>
     </footer>
     <!-- Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
