--- a/views/preAdopt.html
+++ b/views/preAdopt.html
@@ -1,270 +1,198 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/stylesheets/style.css" />
-    <title>Huellitas en casa</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/4d235eb227.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="shortcut icon"
-      href="/public/images/favicon.ico"
-      type="image/x-icon"
-    />
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <header class="main-header">
-      <div class="container-nav">
-        <div class="logo-container">
-          <a class="navbar-logo" href="/views/index.html">
-            <img
-              src="../public/images/huellitas_en_casa-logo.png"
-              class="logo-nav"
-              alt="logo-huellitas"
-            />
-          </a>
-        </div>
-        <nav>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
-            <li class="nav-item">
-              <a class="nav-link active" href="#about-us">
-                <i class="fa-solid fa-paw"></i> Acerca de
-              </a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../public/stylesheets/style.css" />
+  <title>Huellitas en casa</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous" />
+</head>
+
+<body>
+  <header class="main-header">
+    <div class="container-nav">
+      <div class="logo-container">
+        <a class="navbar-logo" href="/views/index.html">
+          <img src="../public/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas" />
+        </a>
+      </div>
+      <nav>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
+          <li class="nav-item">
+            <a class="nav-link active" href="#about-us">
+              <i class="fa-solid fa-paw"></i> Acerca de
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto">
+              <i class="fa-solid fa-paw"></i> Contacto
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fa-solid fa-paw"></i> Voluntariado
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/views/preAdopt.html">
+              <i class="fa-solid fa-paw"></i> Formulario pre Adopción
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./register.html">
+              <i class="fa-regular fa-circle-user"></i> Registrate
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./login.html">
+              <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- Formulario de pre-adopción -->
+  <main class="formulario">
+    <h2>¡Formulario pre-adopción!</h2>
+    <label for="personaje">¿A quién te gustaría adoptar?</label>
+    <select id="personaje" name="personaje">
+      <option value="Aragorn">Aragorn</option>
+      <option value="Dooku">Dooku</option>
+      <option value="Boromir">Boromir</option>
+      <option value="Gala">Gala</option>
+      <option value="Gandalf">Gandalf</option>
+      <option value="Guts">Guts</option>
+      <option value="Legolas">Legolas</option>
+      <option value="Nessa">Nessa</option>
+      <option value="Padme">Padme</option>
+    </select>
+    <h3>Contanos sobre vos</h3>
+    <!-- Registro -->
+    <label for="username">Nombre y apellido:</label>
+    <input type="text" name="nombre" placeholder=" Nombre y apellido" required />
+    <label for="username">Edad:</label>
+    <input type="text" name="edad" placeholder="Ingresa tu edad" required />
+    <label for="Domicilio">Dirección:</label>
+    <input type="text" id="Domicilio" name="Domicilio" placeholder="Ingresa tu dirección" required />
+    <label for="Domicilio">Localidad:</label>
+    <input type="text" id="Domicilio" name="Domicilio" placeholder="Ingresa tu localidad" />
+    <label for="Email">Correo electronico:</label>
+    <input type="email" name="Email" id="email" placeholder="Email">
+    <label for="motivo">¿Por qué motivo quieres adoptar?</label>
+    <textarea id="motivo" name="motivo" rows="5" placeholder="Contanos por qué querés adoptar"></textarea>
+    <label for="tipo_vivienda">¿Qué tipo de vivienda tenés?</label>
+    <select id="tipo_vivienda" name="tipo_vivienda">
+      <option value="casa">Casa</option>
+      <option value="departamento">Departamento</option>
+      <option value="PH">PH</option>
+      <option value="quinta">Quinta</option>
+    </select>
+    <label for="vivienda_alquiler">
+      Si alquilas, ¿Se permiten mascotas donde estas?</label>
+    <select id="vivienda_alquiler" name="vivienda_alquiler">
+      <option value="sí">Sí</option>
+      <option value="no">No</option>
+      <option value="desconoce">Desconoce</option>
+    </select>
+    <p>¿Cuantas personas viven en tu hogar? Indica edades.</p>
+    <input type="text" id="" name="" placeholder="Indica cuantas personas hay en tu hogar y sus edades" />
+    <p>¿Alguien en tu hogar tiene alergia a perros o gatos?</p>
+    <input type="text" id="" name="" placeholder="Indica si con medicación es tratable" />
+    <p>¿Hay otras mascotas en tu casa?</p>
+    <input type="text" id="" name="" placeholder="Indica si son perros o gatos y cuantos" />
+    <p>
+      ¿Podés cubrir los gastos veterinarios necesarios para cuidar su salúd?
+    </p>
+    <input type="text" id="" name="" placeholder="Indica si o no" />
+    <!-- descripcion al finalizar el registro -->
+    <div class="descripcion">
+      <p>
+        Hasta aquí llego el formulario de adopción. Habiendo leído los
+        requisitos y completado el formulario,¿Sentís que estás dispuesto a
+        adoptar responsablemente darle el hogar y la vida que merece. Nosotros
+        buscamos adopciones responsables y para toda la vida. Una mascota no
+        se descarta,no se regala,no se maltrata y no se abandona. Es una vidaa
+        la que se la respeta , cuida y ama como un miembro mas de la
+        familia.<i class="fa-solid fa-paw"></i>
+      </p>
+    </div>
+    <form>
+      <button class="boton-enviar" type="submit">Volver</button>
+      <button class="boton-enviar" type="submit">Enviar</button>
+    </form>
+  </main>
+  <!-- Pie de página -->
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo-container">
+        <img src="../public/images/huellitas_en_casa-logo.png" alt="Huellitas en casa" class="footer-logo" />
+        <p class="footer-direccion">ruta 16 Parc 501</p>
+        <p class="footer-telefono">(549) 11 4465 5161</p>
+      </div>
+      <div class="footer-columns">
+        <div class="footer-column">
+          <h2>Menú</h2>
+          <ul class="footer-list">
+            <li>
+              <a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">
-                <i class="fa-solid fa-paw"></i> Contacto
-              </a>
+            <li>
+              <a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fa-solid fa-paw"></i> Voluntariado
-              </a>
+            <li>
+              <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
-                <i class="fa-solid fa-paw"></i> Formulario pre Adopción
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./register.html">
-                <i class="fa-regular fa-circle-user"></i> Registrate
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./login.html">
-                <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
-              </a>
+            <li>
+              <a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a>
             </li>
           </ul>
-        </nav>
-      </div>
-    </header>
-    <!-- Formulario de pre-adopción -->
-    <main class="formulario">
-      <h2>¡Formulario pre-adopción!</h2>
-      <label for="personaje">¿A quién te gustaría adoptar?</label>
-      <select id="personaje" name="personaje">
-        <option value="Aragorn">Aragorn</option>
-        <option value="Dooku">Dooku</option>
-        <option value="Boromir">Boromir</option>
-        <option value="Gala">Gala</option>
-        <option value="Gandalf">Gandalf</option>
-        <option value="Guts">Guts</option>
-        <option value="Legolas">Legolas</option>
-        <option value="Nessa">Nessa</option>
-        <option value="Padme">Padme</option>
-      </select>
-      <h3>Contanos sobre vos</h3>
-      <!-- Registro -->
-      <label for="username">Nombre y apellido:</label>
-      <input
-        type="text"
-        name="nombre"
-        placeholder=" Nombre y apellido"
-        required
-      />
-      <label for="username">Edad:</label>
-      <input
-        type="text"
-        name="edad"
-        placeholder="Ingresa tu edad"
-        required
-      />
-      <label for="Domicilio">Dirección:</label>
-      <input
-        type="text"
-        id="Domicilio"
-        name="Domicilio"
-        placeholder="Ingresa tu dirección"
-        required
-      />
-      <label for="Domicilio">Localidad:</label>
-      <input
-        type="text"
-        id="Domicilio"
-        name="Domicilio"
-        placeholder="Ingresa tu localidad"
-      />
-      <label for="Email">Correo electronico:</label>
-      <input type="email" name="Email" id="email" placeholder="Email">
-      <label for="motivo">¿Por qué motivo quieres adoptar?</label>
-      <textarea id="motivo" name="motivo" rows="5" placeholder="Contanos por qué querés adoptar"></textarea>
-      <label for="tipo_vivienda">¿Qué tipo de vivienda tenés?</label>
-      <select id="tipo_vivienda" name="tipo_vivienda">
-        <option value="casa">Casa</option>
-        <option value="departamento">Departamento</option>
-        <option value="PH">PH</option>
-        <option value="quinta">Quinta</option>
-      </select>
-      <label for="vivienda_alquiler">
-        Si alquilas, ¿Se permiten mascotas donde estas?</label
-      >
-      <select id="vivienda_alquiler" name="vivienda_alquiler">
-        <option value="sí">Sí</option>
-        <option value="no">No</option>
-        <option value="desconoce">Desconoce</option>
-      </select>
-      <p>¿Cuantas personas viven en tu hogar? Indica edades.</p>
-      <input
-        type="text"
-        id=""
-        name=""
-        placeholder="Indica cuantas personas hay en tu hogar y sus edades"
-      />
-      <p>¿Alguien en tu hogar tiene alergia a perros o gatos?</p>
-      <input
-        type="text"
-        id=""
-        name=""
-        placeholder="Indica si con medicación es tratable"
-      />
-      <p>¿Hay otras mascotas en tu casa?</p>
-      <input
-        type="text"
-        id=""
-        name=""
-        placeholder="Indica si son perros o gatos y cuantos"
-      />
-      <p>
-        ¿Podés cubrir los gastos veterinarios necesarios para cuidar su salúd?
-      </p>
-      <input type="text" id="" name="" placeholder="Indica si o no" />
-
-      <!-- descripcion al finalizar el registro -->
-      <div class="descripcion">
-        <p>
-          Hasta aquí llego el formulario de adopción. Habiendo leído los
-          requisitos y completado el formulario,¿Sentís que estás dispuesto a
-          adoptar responsablemente darle el hogar y la vida que merece. Nosotros
-          buscamos adopciones responsables y para toda la vida. Una mascota no
-          se descarta,no se regala,no se maltrata y no se abandona. Es una vidaa
-          la que se la respeta , cuida y ama como un miembro mas de la
-          familia.<i class="fa-solid fa-paw"></i>
-        </p>
-      </div>
-
-      <form>
-        <button class="boton-enviar" type="submit">Volver</button>
-        <button class="boton-enviar" type="submit">Enviar</button>
-      </form>
-
-    </main>
-    <!-- Pie de página -->
-    <footer>
-      <div class="footer-content">
-        <div class="footer-logo-container">
-          <img
-            src="../public/images/huellitas_en_casa-logo.png"
-            alt="Huellitas en casa"
-            class="footer-logo"
-          />
-          <p class="footer-direccion">ruta 16 Parc 501</p>
-          <p class="footer-telefono">(549) 11 4465 5161</p>
         </div>
-        <div class="footer-columns">
-          <div class="footer-column">
-            <h2>Menú</h2>
-            <ul class="footer-list">
-              <li>
-                <a href="#about-us"
-                  ><i class="fa-solid fa-paw"></i> Acerca de</a
-                >
-              </li>
-              <li>
-                <a href="#animal-container"
-                  ><i class="fa-solid fa-paw"></i> Adopción</a
-                >
-              </li>
-              <li>
-                <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
-              </li>
-              <li>
-                <a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a>
-              </li>
-            </ul>
-          </div>
 
-          <div class="footer-column">
-            <h2>Nuestras redes</h2>
-            <ul class="footer-list">
-              <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
-              <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
-              <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
-              <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
-            </ul>
-          </div>
-        </div>
         <div class="footer-column">
-          <h4>Suscríbete a nuestro Newsletter</h4>
-          <form action="https://your-mailchimp-form-action" method="post">
-            <div class="form-group">
-              <input
-                type="email"
-                name="EMAIL"
-                placeholder="Tu correo electrónico"
-                required
-              />
-              <button type="submit" class="btn-submit">Suscríbete</button>
-            </div>
-          </form>
+          <h2>Nuestras redes</h2>
+          <ul class="footer-list">
+            <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
+            <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
+            <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
+            <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
+          </ul>
         </div>
       </div>
-      <p class="footer-copyright">
-        © 2024 Huellitas en Casa. Todos los derechos reservados.
-      </p>
-    </footer>
-    <!-- Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      <div class="footer-column">
+        <h4>Suscríbete a nuestro Newsletter</h4>
+        <form action="https://your-mailchimp-form-action" method="post">
+          <div class="form-group">
+            <input type="email" name="EMAIL" placeholder="Tu correo electrónico" required />
+            <button type="submit" class="btn-submit">Suscríbete</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <p class="footer-copyright">
+      © 2024 Huellitas en Casa. Todos los derechos reservados.
+    </p>
+  </footer>
+  <!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
