--- a/views/adoptDetail.html
+++ b/views/adoptDetail.html
@@ -30,7 +30,7 @@
             <nav>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#about-us">
+                        <a class="nav-link active" href="/views/aboutUs.html">
                             <i class="fa-solid fa-paw"></i> Acerca de
                         </a>
                     </li>
@@ -40,13 +40,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fa-solid fa-paw"></i> Voluntariado
+                        <a class="nav-link" href="/views/adoptStories.html">
+                            <i class="fa-solid fa-paw"></i> Historias
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/views/preAdopt.html">
-                            <i class="fa-solid fa-paw"></i> Formulario pre Adopción
+                            <i class="fa-solid fa-paw"></i> Formulario de pre-adopción
                         </a>
                     </li>
                     <li class="nav-item">
@@ -90,17 +90,31 @@
                         <li><a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a></li>
                         <li><a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a></li>
                         <li><a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a></li>
-                        <li><a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a></li>
+                        <li><a href="#"><i class="fa-solid fa-paw"></i>Historias</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
-                    <h2>Nuestras redes</h2>
+                    <h2>Nos encontramos acá</h2>
                     <ul class="footer-list">
-                        <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
-                        <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
-                        <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
-                        <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
-                    </ul>
+                        <li>
+                          <a href="https://www.facebook.com/profile.php?id=61571625003086"
+                            ><i class="fa-brands fa-square-facebook"></i>Facebook</a
+                          >
+                        </li>
+                        <li>
+                          <a href="https://www.instagram.com/huellitasencasa.ar/"
+                            ><i class="fa-brands fa-square-instagram"></i>Instagram</a
+                          >
+                        </li>
+                        <li>
+                          <a
+                            href="mailto:huellitasencasa.ar@gmail.com"
+                            title="Envíanos un correo"
+                          >
+                            <i class="fa-solid fa-envelope"></i> Correo electrónico
+                          </a>
+                        </li>
+                      </ul>
                 </div>
             </div>
             <div class="footer-newsletter">
