--- a/public/stylesheets/preAdopt.css
+++ b/public/stylesheets/preAdopt.css
@@ -59,7 +59,6 @@ textarea {
 
 .boton-enviar {
     background-color: #4CAF50;
-    /* Verde */
     color: white;
     padding: 10px 20px;
     border: none;
@@ -68,7 +67,7 @@ textarea {
     margin-right: 10px;
 }
 
-/* Media Queris */
+/* Media Queries */
 
 @media screen and (min-width: 425px) {
     .formulario {
