--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
       <nav>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
           <li class="nav-item">
-            <a class="nav-link active" href="#about-us">
+            <a class="nav-link active" href="/views/aboutUs.html">
               <i class="fa-solid fa-paw"></i> Acerca de
             </a>
           </li>
@@ -39,13 +39,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa-solid fa-paw"></i> Voluntariado
+            <a class="nav-link" href="/views/adoptStories.html">
+              <i class="fa-solid fa-paw"></i> Historias
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/views/preAdopt.html">
-              <i class="fa-solid fa-paw"></i> Formulario pre Adopción
+              <i class="fa-solid fa-paw"></i>  Formulario de pre-adopción
             </a>
           </li>
           <li class="nav-item">
@@ -62,19 +62,14 @@
       </nav>
     </div>
   </header>
+  
+<!-- Sección Banner  -->
+<div class="banner-container">
+  <div class="banner">
+    <img src="/public/images/banner-ejemplo.png" alt="Banner-adopta-hoy" class="banner-img" />
+  </div>
 
   <main class="content">
-    <h2 id="titulo-container">Sobre nosotras</h2>
-    <!-- Texto sección Acerca de -->
-    <p id="about-us">
-      Somos un equipo comprometido con el bienestar animal. Nuestra misión es
-      rescatar , cuidar y encontrar hogares amorosos para perros y gatos que
-      han sido abandonados o necesitan una segunda oportunidad. Nos enfocamos
-      en garantizar adopciones responsables , acompañando a los adoptantes en
-      casa paso del camino para construir juntos historias llenas de amor y
-      esperanza.
-    </p>
-
     <form action="buscar" method="get" id="search-form">
       <input type="text" id="search" name="search" placeholder="Buscar por zona o nombre" /><i
         class="fa-solid fa-magnifying-glass"></i>
@@ -280,7 +275,7 @@
       <p>Llena este formulario para ponernos en contacto con vos.</p>
       <div class="caja-formulario">
         <form id="formulario">
-          <label for="name">Nombre Completo</label>
+          <label for="name">Nombre Completo:</label>
           <input class="formulario-input" type="text" id="name" name="name" placeholder="Nombre y apellido" />
           <label for="email">Email:</label>
           <input class="formulario-input" type="email" name="email" id="email" placeholder="Email" />
@@ -310,7 +305,7 @@
           <h2>Menú</h2>
           <ul class="footer-list">
             <li>
-              <a href="#about-us"><i class="fa-solid fa-paw"></i> Acerca de</a>
+              <a href="/views/aboutUs.html"><i class="fa-solid fa-paw"></i> Acerca de</a>
             </li>
             <li>
               <a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a>
@@ -319,22 +314,36 @@
               <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
             </li>
             <li>
-              <a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a>
+              <a href="/views/adoptStories.html"><i class="fa-solid fa-paw"></i> Historias </a>
             </li>
           </ul>
         </div>
         <div class="footer-column">
-          <h2>Nuestras redes</h2>
+          <h2>Nos encontramos acá</h2>
           <ul class="footer-list">
-            <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
-            <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
-            <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
-            <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
+            <li>
+              <a href="https://www.facebook.com/profile.php?id=61571625003086"
+                ><i class="fa-brands fa-square-facebook"></i>Facebook</a
+              >
+            </li>
+            <li>
+              <a href="https://www.instagram.com/huellitasencasa.ar/"
+                ><i class="fa-brands fa-square-instagram"></i>Instagram</a
+              >
+            </li>
+            <li>
+              <a
+                href="mailto:huellitasencasa.ar@gmail.com"
+                title="Envíanos un correo"
+              >
+                <i class="fa-solid fa-envelope"></i> Correo electrónico
+              </a>
+            </li>
           </ul>
         </div>
       </div>
       <div class="footer-column">
-        <h4>Suscríbete a nuestro Newsletter</h4>
+        <h4>Newsletter</h4>
         <form action="https://your-mailchimp-form-action" method="post">
           <div class="form-group">
             <input type="email" name="EMAIL" placeholder="Tu correo electrónico" required />
