--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../public/stylesheets/style.css" />
-  <title>Huellitas en casa</title>
+  <title>Inicia sesión</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -28,7 +28,7 @@
       <nav>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
           <li class="nav-item">
-            <a class="nav-link active" href="#about-us">
+            <a class="nav-link active" href="/views/aboutUs.html">
               <i class="fa-solid fa-paw"></i> Acerca de
             </a>
           </li>
@@ -38,13 +38,13 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fa-solid fa-paw"></i> Voluntariado
+              <a class="nav-link" href="/views/adoptStories.html">
+                <i class="fa-solid fa-paw"></i>Historias
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/views/preAdopt.html">
-                <i class="fa-solid fa-paw"></i> Formulario pre Adopción
+                <i class="fa-solid fa-paw"></i> Formulario de pre-adopción
               </a>
             </li>
             <li class="nav-item">
@@ -99,7 +99,7 @@
           <h2>Menú</h2>
           <ul class="footer-list">
             <li>
-              <a href="#about-us"
+              <a href="/views/aboutUs.html"
                 ><i class="fa-solid fa-paw"></i> Acerca de</a
               >
             </li>
@@ -112,23 +112,37 @@
               <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
             </li>
             <li>
-              <a href="#"><i class="fa-solid fa-paw"></i> Voluntariado</a>
+              <a href="/views/adoptStories.html"><i class="fa-solid fa-paw"></i>Historias</a>
             </li>
           </ul>
         </div>
 
         <div class="footer-column">
-          <h2>Nuestras redes</h2>
+          <h2>Nos encontramos acá</h2>
           <ul class="footer-list">
-            <li><i class="fa-brands fa-square-facebook"></i>Facebook</li>
-            <li><i class="fa-brands fa-square-instagram"></i>Instagram</li>
-            <li><i class="fa-brands fa-square-twitter"></i>Twitter</li>
-            <li><i class="fa-solid fa-envelope"></i>Correo electrónico</li>
+            <li>
+              <a href="https://www.facebook.com/profile.php?id=61571625003086"
+                ><i class="fa-brands fa-square-facebook"></i>Facebook</a
+              >
+            </li>
+            <li>
+              <a href="https://www.instagram.com/huellitasencasa.ar/"
+                ><i class="fa-brands fa-square-instagram"></i>Instagram</a
+              >
+            </li>
+            <li>
+              <a
+                href="mailto:huellitasencasa.ar@gmail.com"
+                title="Envíanos un correo"
+              >
+                <i class="fa-solid fa-envelope"></i> Correo electrónico
+              </a>
+            </li>
           </ul>
         </div>
       </div>
       <div class="footer-column">
-        <h4>Suscríbete a nuestro Newsletter</h4>
+        <h4>Newsletter</h4>
         <form action="https://your-mailchimp-form-action" method="post">
           <div class="form-group">
             <input
