agregue carpetas src y views, archivos admin.js animalEdit y animalAdd. adapte app.js a modificaciones

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
-@import url(aboutUs.css);
+@import url("aboutUs.css");
 @import url("adoptDetail.css");
-@import url(adoptStories.css);
+@import url("adoptStories.css");
 @import url("index.css");
 @import url("login.css");
 @import url("register.css");
