--- a/src/views/animals/adoptDetail.ejs
+++ b/src/views/animals/adoptDetail.ejs
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../public/stylesheets/style.css" />
-  <title>Detalles de <%= animal.name %></title>
-</head>
+<%- include('partials/head') %>
 
 <body>
   <header>
@@ -14,7 +9,7 @@
   </header>
 
   <main>
-    <img src="<%= animal.image %>" alt="Imagen de <%= animal.nombre %>" />
+    <img src="<%= animal.image %>" alt="Imagen de <%= animal.name %>" />
     <p><strong>Sexo:</strong> <%= animal.sex %></p>
     <p><strong>Edad:</strong> <%= animal.age %></p>
     <p><strong>Zona:</strong> <%= animal.zone %></p>
@@ -22,6 +17,8 @@
     <p><strong>Descripción:</strong> <%= animal.description %></p>
     <a href="/">Volver al inicio</a>
   </main>
+  <%- include('partials/footer') %>
+
 </body>
 
 </html>
