--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,68 +1,12 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-  <title>Huellitas en casa</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon" />
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1FkwK04lK/TfRSa" crossorigin="anonymous" />
-</head>
+  <%- include('partials/head') %>
 
 <body class="container">
-  <header class="main-header">
-    <div class="container-nav">
-      <div class="logo-container">
-        <a class="navbar-logo" href="/views/index.html">
-          <img src="/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas" />
-        </a>
-      </div>
-      <nav>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
-          <li class="nav-item">
-            <a class="nav-link active" href="/views/aboutUs.html">
-              <i class="fa-solid fa-paw"></i> Acerca de
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contacto">
-              <i class="fa-solid fa-paw"></i> Contacto
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/views/adoptStories.html">
-              <i class="fa-solid fa-paw"></i> Historias
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/views/preAdopt.html">
-              <i class="fa-solid fa-paw"></i>  Formulario de pre-adopción
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./register.html">
-              <i class="fa-regular fa-circle-user"></i> Registrate
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./login.html">
-              <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  
+
+  <%- include('partials/header') %>
+
 <!-- Sección Banner  -->
 <div class="banner-container">
   <div class="banner">
@@ -84,7 +28,7 @@
           <img src="/images/aragorn-adopcion.jpg" alt="img-perro-marron-adulto" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -105,7 +49,7 @@
           <img src="/images/dooku-adopcion.jpg" alt="img-gatito-naranja-cachorro" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -126,7 +70,7 @@
           <img src="/images/boromir-adopcion.jpg" alt="img-perro-atigrado-cachorro" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -147,7 +91,7 @@
           <img src="/images/galadriel-adopcion.jpeg" alt="img-gata-tricolor-cachorra" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -168,7 +112,7 @@
           <img src="/images/gandalf-adopcion.jpg" alt="img-perra-blanca-y-negra-cachorra" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -189,7 +133,7 @@
           <img src="/images/guts-adopcion.jpg" alt="img-gatito-naranja-cachorro" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -210,7 +154,7 @@
           <img src="/images/legolas-adopcion.jpg" alt="img-perro-naranja-adulto" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -231,7 +175,7 @@
           <img src="/images/nessa-adopcion.jpg" alt="img-perra-blanca-y-negra-cachorra" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -252,7 +196,7 @@
           <img src="/images/padme-adopcion.jpeg" alt="img-gata-carey-cachorra" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.html">
+              <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
@@ -293,69 +237,9 @@
       </div>
     </section>
   </main>
-  <footer>
-    <div class="footer-content">
-      <div class="footer-logo-container">
-        <img src="/images/huellitas_en_casa-logo.png" alt="Huellitas en casa" class="footer-logo" />
-        <p class="footer-direccion">ruta 16 Parc 501</p>
-        <p class="footer-telefono">(549) 11 4465 5161</p>
-      </div>
-      <div class="footer-columns">
-        <div class="footer-column">
-          <h2>Menú</h2>
-          <ul class="footer-list">
-            <li>
-              <a href="/views/aboutUs.html"><i class="fa-solid fa-paw"></i> Acerca de</a>
-            </li>
-            <li>
-              <a href="#animal-container"><i class="fa-solid fa-paw"></i> Adopción</a>
-            </li>
-            <li>
-              <a href="#contacto"><i class="fa-solid fa-paw"></i> Contacto</a>
-            </li>
-            <li>
-              <a href="/views/adoptStories.html"><i class="fa-solid fa-paw"></i> Historias </a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-column">
-          <h2>Nos encontramos acá</h2>
-          <ul class="footer-list">
-            <li>
-              <a href="https://www.facebook.com/profile.php?id=61571625003086"
-                ><i class="fa-brands fa-square-facebook"></i>Facebook</a
-              >
-            </li>
-            <li>
-              <a href="https://www.instagram.com/huellitasencasa.ar/"
-                ><i class="fa-brands fa-square-instagram"></i>Instagram</a
-              >
-            </li>
-            <li>
-              <a
-                href="mailto:huellitasencasa.ar@gmail.com"
-                title="Envíanos un correo"
-              >
-                <i class="fa-solid fa-envelope"></i> Correo electrónico
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-column">
-        <h4>Newsletter</h4>
-        <form action="https://your-mailchimp-form-action" method="post">
-          <div class="form-group">
-            <input type="email" name="EMAIL" placeholder="Tu correo electrónico" required />
-            <button type="submit" class="btn-submit">Suscríbete</button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <p class="footer-copyright">
-      © 2024 Huellitas en Casa. Todos los derechos reservados.
-    </p>
-  </footer>
+
+  <%- include('partials/footer') %>
+
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
